[metadata]
name = sibyl
version = 0.1
author = Camille MOUGEY
author_email = commial@gmail.com
url = https://github.com/cea-sec/sibyl
download_url = https://github.com/cea-sec/sibyl/tarball/master
license = GPLv3+
description = A Miasm2 based function divination
long_description = Sibyl is a tool aiming at recognizing functions in binaries based on their side effects, by running them in a sandboxed environment.
keywords = reverse engineering, emulation

[options]
package_dir =
    =src
packages =
    sibyl
    sibyl/abi
    sibyl/engine
    sibyl/learn,
    sibyl/learn/tracer
    sibyl/learn/generator,
    sibyl/heuristics
    sibyl/test
    sibyl/actions
scripts =
    bin/sibyl